[gd_scene load_steps=7 format=3 uid="uid://b23dvb1hwn14x"]

[ext_resource type="FontFile" uid="uid://dliqfphrc3jgo" path="res://Fonts/PixelOperator8.ttf" id="1_4jm34"]
[ext_resource type="Texture2D" uid="uid://b882xjlblm321" path="res://Sprite/Heart.png" id="2_tnl40"]
[ext_resource type="Texture2D" uid="uid://byjyortno6gg6" path="res://Sprite/EmptyHeart.png" id="3_v7lf4"]
[ext_resource type="Script" uid="uid://bntoaau0ga4p6" path="res://Scripts/pause.gd" id="4_xcprn"]
[ext_resource type="Texture2D" uid="uid://bq28t7akcpahn" path="res://Sprite/Pause Button.png" id="5_087w1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hspdg"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.533037, 0.533037, 0.533037, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="UI" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
offset_left = 19.0
offset_top = 17.0
offset_right = 108.0
offset_bottom = 50.0
scale = Vector2(1.6433, 1.97411)

[node name="PointsLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4jm34")
theme_override_font_sizes/font_size = 8
text = "Keys: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hearts" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -311.0
offset_top = 19.0
offset_right = -105.0
offset_bottom = 86.0
grow_horizontal = 0

[node name="BoxContainer" type="BoxContainer" parent="Hearts"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -33.0
offset_right = 103.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Heart" type="TextureRect" parent="Hearts/BoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_tnl40")
expand_mode = 2

[node name="Heart2" type="TextureRect" parent="Hearts/BoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_tnl40")
expand_mode = 2

[node name="Heart3" type="TextureRect" parent="Hearts/BoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_tnl40")
expand_mode = 2

[node name="Empty Hearts" type="BoxContainer" parent="Hearts"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -32.5
offset_right = 103.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="Heart" type="TextureRect" parent="Hearts/Empty Hearts"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_v7lf4")
expand_mode = 2

[node name="Heart2" type="TextureRect" parent="Hearts/Empty Hearts"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_v7lf4")
expand_mode = 2

[node name="Heart3" type="TextureRect" parent="Hearts/Empty Hearts"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_v7lf4")
expand_mode = 2

[node name="Pause" type="Node" parent="."]
script = ExtResource("4_xcprn")

[node name="Button" type="Button" parent="Pause"]
texture_filter = 1
offset_left = 1070.0
offset_top = 20.0
offset_right = 1136.0
offset_bottom = 86.0
theme_override_icons/icon = ExtResource("5_087w1")
expand_icon = true

[node name="Pause Panel" type="Panel" parent="Pause"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Pause/Pause Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.0
offset_top = 81.0
offset_right = 226.0
offset_bottom = 212.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Game Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/Pause Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -114.0
offset_right = 167.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="Pause/Pause Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_hspdg")
text = "Resume"

[node name="Back to menu" type="Button" parent="Pause/Pause Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_hspdg")
text = "Back to menu"

[node name="Restart level" type="Button" parent="Pause/Pause Panel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_hspdg")
text = "Restart level
"

[node name="Death" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Death" type="Label" parent="Death"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -164.0
offset_right = 56.5
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.82881, 2.71939e-06, 5.77569e-07, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 100
text = "You died"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="Death"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -53.0
offset_right = 170.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1
vertical = true

[node name="Restart level" type="Button" parent="Death/BoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_hspdg")
text = "Restart level
"

[node name="Back to menu" type="Button" parent="Death/BoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_hspdg")
text = "Back to menu"

[connection signal="pressed" from="Pause/Button" to="Pause" method="_on_button_pressed"]
[connection signal="pressed" from="Pause/Pause Panel/VBoxContainer/Resume" to="Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/Pause Panel/VBoxContainer/Back to menu" to="Pause" method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Pause/Pause Panel/VBoxContainer/Restart level" to="Pause" method="_on_restart_level_pressed"]
[connection signal="pressed" from="Death/BoxContainer/Restart level" to="Pause" method="_on_restart_level_pressed"]
[connection signal="pressed" from="Death/BoxContainer/Back to menu" to="Pause" method="_on_back_to_menu_pressed"]
